stop dice from  overlapping content list

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ footer {
 }
 
 #logo {
-  width: 150px;
+  width: 75px;
   transition: transform 1s ease;
 }
 
